--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   "dependencies": {
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.0.1",
+    "antd": "^4.12.3",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "umi": "^3.0.1",
+    "umi": "^3.1.3",
+    "umi-request": "^1.3.5",
     "yorkie": "^2.0.0"
   },
   "devDependencies": {
